[tool.poetry]
package-mode = false
name = "sae-streetlight-commander"
version = "0.0.4"
description = ""
license = "AGPLv3"
readme = "README.md"
authors = ["ztarbug <markus.zarbock@starwit.de>"]

[tool.poetry.dependencies]
python = "^3.12"
govee-local-api = "^2.2.0"
prompt-toolkit = "^3.0.52"
psycopg2 = "^2.9.10"
pydantic-settings = "^2.10.1"
prometheus-client = "^0.23.1"
pydantic = "^2.11.9"
visionlib = { git = "https://github.com/starwit/vision-lib.git", subdirectory = "python", tag = "0.11.2" }

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
